tests/type/errors/bad_array_size2.xi
foo(): int {
  c: int[]
  i: bool[foo() * foo() + c[foo()]]
  d: int[i[5 + foo() + c[foo()]]] 
}
